[CLOUDERA-BUILD] Changes to make upstream Kafka work with Cloudera, a combination of multiple commits
This commit includes:
   - Adding the gradle wrapper
   - Adding cdh dependency support to the build
   - Adding wrap support for secure password passing
   - Adding Sentry support

Change-Id: I6ccb916be1e7d4abb01b0e6269cc814f900cc0af

[CLOUDERA-BUILD] Downstream-only build and test modifications
This is a combination of 11 commits.

[CLOUDERA-BUILD] Use cdh-root pom in streams quickstart

[CLOUDERA-BUILD] Change how CDH component versions are forced

Modified SSLUtilsTest to compile with the version of jetty dependen on by CDH

Change-Id: I1a55cfa456b932fc1f262b9c62d204ec87fcb659

[CLOUDERA-BUILD] fiexes kafka.server.ServerShutdownTest.testCleanShutdownAfterFailedStartup as zookeeper-3.4.5-cdh5.13.0.jar requires valid host name

Change-Id: I326dce7e1996d464c664eeb4fe4b7b12533e3585

[CDH-63187] [CLOUDERA-BUILD] Use jackson version specified in cdh-root

Get jackson version from cdh-root so it can be bumped up centrally in case of a security vulnerability. By doing this, we upgrade from jackson 2.9.1 to 2.9.2

Change-Id: I792936fb808137afdcd5cc17f6deb0fcf0b23cbe

CDH-63378 - add unit tests to kafka for c6 commit flow

Change-Id: I471929ed8a83e89d7020c62b608051d54989bd4a

[CDH-64735] [CLOUDERA-BUILD] Added unitTestWithFlakyRetry and testWithFlakyRetry tasks to prevent build failures caused by flaky tests.

These tasks run test and collect failures without failing the build. Failed tests are run again in a second turn and the build is failed only if there are test failures in this second run.

Change-Id: I668a3327fb1a7df52988144063f953b099096195

[CDH-66529] Include internal maven mirrors

Change-Id: I028af6ec4ba7cb4ef3047d1763591b318f31f004

[CDH-67130] Kafka should resolve dependencies in internal->external order

Change-Id: I2f58eaaf39d7637c5492ea9a8cb6b7437b0486d8

[CDH-67967] [CLOUDERA-BUILD] Kafka - Consensus to upgrade jmh to 1.20

Change-Id: Ie8265f65e2a45031f7